# QueryMind

./: README.md  main.py  pyproject.toml
