[tool.poetry]
name = "python-api-lms"
version = "0.1.0"
description = ""
authors = ["kratik agrawal  <82315937+Kratik29@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
uvicorn = "^0.30.6"
fastapi = "^0.112.2"
pydantic = "^2.8.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
